# food-moment

./: .gitignore  API_DOCUMENTATION.md  CODE_REVIEW_REPORT.md  CODE_STYLE_GUIDE.md  Claude.md  DEVELOPMENT_PLAN.md  TEST_PLAN.md  docker-compose.yml
FoodMoment.xcodeproj/: project.pbxproj
FoodMoment/App/: AppState.swift  ContentView.swift  FoodMomentApp.swift  MainTabView.swift
FoodMoment/Models/: Achievement.swift  DetectedFood.swift  MealRecord.swift  UserProfile.swift  WaterLog.swift
FoodMoment/Resources/: Info.plist
FoodMoment/Shared/: SharedDataManager.swift
FoodMomentTests/Mocks/: MockData.swift
FoodMomentWidget/: Info.plist  MealRecordingLiveActivity.swift  SharedDataManager.swift
backend/: .env.example  README.md  benchmark_models.py  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  logging_config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  demo.py  food.py  meals.py  router.py  stats.py  storage.py  user.py  water.py
backend/app/models/: __init__.py  food.py  meal.py  user.py  water.py
backend/app/schemas/: auth.py  base.py  food.py  meal.py  stats.py  user.py  water.py
backend/app/services/: ai_service.py  auth_service.py  food_db_service.py  storage_service.py
backend/migrations/: add_updated_at.sql
docs/: api-documentation.md  code-style-guide.md  development-plan.md  manual-test-checklist.md  nutrient-color-design.md  reinventing-the-wheel-analysis.md  ui-polish-backlog.md  ui-visual-polish-plan.md
ios/: project.yml
scripts/: capture_screenshots.sh  dev.sh  generate_app_icon.py
(+272 files in other folders)
