[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.0",
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "azure-storage-blob>=12.24.0",
    "fastapi>=0.128.5",
    "httpx>=0.28.1",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.46",
    "structlog>=24.1.0",
    "uvicorn[standard]>=0.40.0",
]
